ymls/faastapp/deployment.yml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: faast-v3
  #namespace: wordpress
  labels:
    app: faast-v3
spec:
  selector:
    matchLabels:
      app: faast-v3
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: faast-v3
        tier: frontend
    spec:
      containers:
      - image: docker-registry.paosin.local:5000/faastapp:v1
        name: faast-v3
        ports:
        - containerPort: 3001
          name: faast-v3
 #       volumeMounts:
 #       - name: wordpress-persistent-storage
 #         mountPath: /var/www/html
 #     volumes:
 #     - name: wordpress-persistent-storage
 #       persistentVolumeClaim:
 #         claimName: wp-pv-claim
      nodeSelector:
         tier: frontend
