ymls/faastapp/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: faast-v3
  name: faast-v3
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: faast-v3
